fixed scroll padding and small text on mobile

--- a/src/css/_projects.scss
+++ b/src/css/_projects.scss
@@ -37,8 +37,6 @@
 
             .text {
                 padding: 0 .5em;
-                font-size: small;
-
             }
 
             .link {
